# fpgasynth

./: .gitignore  adsr.sv  adsr_tb.sv  bin2bcd.sv  bin2bcd_tb.sv  eexp.sv  eexp_tb.sv  gensine.py  lerp.sv  lerp_tb.sv  mul.sv  mul_tb.sv  mypackage.sv  nco.sv  nco_tb.sv  pdm.sv  pll.bsf  pll.qip  pll.v  pll_bb.v  ring_buffer.sv  ring_buffer_tb.sv  sine.mem  sine_wavetable.sv  sine_wavetable_tb.sv  testbench.qpf  testbench.qsf  testbench.sdc  top.sv
.github/workflows/: verilate.yaml
verilator/: CMakeLists.txt  Vadsr.cpp  Vadsr_tb_main.cpp  Vbin2bcd.cpp  Veexp.cpp  Veexp_tb_main.cpp  Vlerp.cpp  Vlerp_tb_main.cpp  Vmul.cpp  Vmul_tb_main.cpp  Vnco.cpp  Vsine_wavetable.cpp  main.cpp.in  main.hpp
